# neopad

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
cmake/: bgfx-shaders.cmake  bgfx.cmake  cglm.cmake  glfw.cmake
cmake/patches/: bgfx-cmake.patch
demo/: CMakeLists.txt  demo.c  demo.h  demo_input.c  logo.h  neopad.c  platform.h  shaders.c  shaders.h  util.c  util.h
demo/util/: gl_shaders.c
demo/util/bgfx/: c99_embedded_shader.c  c99_embedded_shader.h
docs/: CMakeLists.txt  index.md
include/neopad/: geometry.h  lib.h  neopad.h  object.h  renderer.h  types.h
src/: CMakeLists.txt  lib.c  neopad.c  renderer.c
src/include/ctl/: array.h  string.h  unordered_map.h  vector.h
src/include/neopad/internal/: renderer.h
src/include/neopad/internal/renderer/: background.h  module.h  vector.h
src/include/neopad/internal/shims/bgfx/: embedded_shader.h
src/include/neopad/internal/shims/bx/: spscqueue.h  thread.h
src/include/neopad/internal/util/bgfx/: embedded_shader.h
src/include/neopad/internal/util/bx/: thread.h
src/internal/: log.h  renderer.h
src/internal/ctl/: algorithm.h  deque.h  list.h  map.h  unordered_set.h
src/internal/ctl/bits/: container.h  integral.h
src/renderer/: background.c  vector.c
src/renderer/shaders/: fs_grid.sc
src/shaders/: fs_basic.sc  fs_grid.sc  uniforms.sh  varying.def.sc  vs_basic.sc  vs_grid.sc
src/util/bgfx/: embedded_shader.c  embedded_shader.h
src/util/bx/: spscqueue.cpp  thread.cpp
src/util/ctl/: ctl.h  priority_queue.h  queue.h  set.h  stack.h
src/util/ctl/bits/: iterators.h
test/: CMakeLists.txt  test.c
tests/: CMakeLists.txt  test.c  test.cpp
